# nvgx

./: .gitignore  Cargo.toml  README.md  TODO.md
nvg-gl/: Cargo.toml
nvg-gl/examples/: demo-bezier.rs  demo-clock.rs  demo-cutout.rs  demo-draw.rs  demo-inst.rs  demo-square.rs  demo-text.rs
nvg-gl/examples/demo/: mod.rs  ogl.rs  wgpu.rs
nvg-gl/src/: fb.rs  lib.rs  renderer.rs
nvg-gl/src/ogl/: fb.rs  mod.rs  renderer.rs
nvg-gl/src/wgpu/: call.rs  fb.rs  instance.rs  mesh.rs  mod.rs  pipeline.rs  renderer.rs  shader.wgsl  texture.rs  unifroms.rs
nvgx-demo/: Cargo.toml
nvgx-demo/examples/: demo-bezier.rs  demo-clock.rs  demo-cutout.rs  demo-draw.rs  demo-inst.rs  demo-square.rs  demo-text.rs
nvgx-demo/fps/: plt.py
nvgx-demo/src/: lib.rs  ogl.rs  perf.rs  wgpu.rs
nvgx-ogl/: Cargo.toml  README.md
nvgx-ogl/src/: fb.rs  lib.rs  renderer.rs  shader.vert
nvgx-wgpu/: Cargo.toml  README.md
nvgx-wgpu/src/: call.rs  fb.rs  instance.rs  lib.rs  mesh.rs  pipeline.rs  renderer.rs  texture.rs  unifroms.rs
screenshots/: plt.py
src/: cache.rs  color.rs  context.rs  fonts.rs  lib.rs  math.rs  paint.rs  renderer.rs
src/context/: composite.rs  core.rs  core_fb.rs  core_font.rs  core_image.rs  core_path.rs  core_path_cache.rs  core_path_expand.rs  mod.rs  paint.rs
src/math/: mod.rs  points.rs  primitive.rs  transfrom.rs
src/paint/: mod.rs  paint.rs
src/path/: commands.rs  effect.rs  instance.rs  mod.rs  path.rs  transform.rs
src/path/cache/: cap_join.rs  draw_path.rs  mod.rs
src/path_cache/: cap_join.rs  draw_path.rs  mod.rs
