[package]
name = "nvgx"
version = "0.2.0"
authors = ["rede97 <m454078356@163.com>"]
edition = "2018"
keywords = ["nanovg", "opengl", "wgpu"]
description = "Pure-rust implementation of NanoVG"
license = "MIT"
publish = true
homepage = "https://github.com/rede97/nvg"
repository = "https://github.com/rede97/nvg"

[dependencies]
bitflags = "1.2.1"
image = "0.25"
anyhow = "1.0.26"
rusttype = { version = "0.9", features = ["gpu_cache"] }
slab = "0.4"
num-traits = "0.2"
clamped = "1.0.0"
rawpointer = "0.2.1"
bytemuck = { version = "1.23.0", features = ["derive"] }
[dev-dependencies]
chrono = "0.4.10"
rand = "0.7.2"
lazy_static = "1.4.0"
[features]
default = ["wirelines"]
wirelines = []

[workspace]
members = ["nvgx-demo", "nvgx-ogl", "nvgx-wgpu"]
