[package]
name = "nvg-gl"
version = "0.5.4"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
keywords = ["nanovg", "opengl"]
description = "NVG Renderer for OpenGL"
license = "MIT"
publish = true
homepage = "https://github.com/sunli829/nvg"
repository = "https://github.com/sunli829/nvg"

[features]
default = ["wireframe", "wirelines", "wgpu-impl"]
wireframe = ["nvg/wireframe"]
wirelines = ["nvg/wirelines"]
wgpu-impl = ["pollster", "wgpu"]
ogl-impl = ["gl", "glutin"]

[dependencies]
nvg = { version = "0.5.7", path = "../" }
cfg-if = "1.0"
slab = "0.4.2"
anyhow = "1.0.26"
glutin = { version = "0.25.1", optional = true }
gl = { version = "0.14.0", optional = true }
winit = "0.23"
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "25.0.0", optional = true }
[dev-dependencies]
chrono = "0.4.10"
rand = "0.7.2"
lazy_static = "1.4.0"
