[package]
name = "nvg-gl"
version = "0.5.4"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
keywords = ["nanovg", "opengl"]
description = "NVG Renderer for OpenGL"
license = "MIT"
publish = true
homepage = "https://github.com/sunli829/nvg"
repository = "https://github.com/sunli829/nvg"

[features]
default = ["wirelines", "ogl-impl"]
wirelines = ["nvg/wirelines"]
wgpu-impl = ["pollster", "wgpu", "indexmap"]
ogl-impl = ["gl", "glutin", "glutin-winit"]
example-single-inst = []

[dependencies]
nvg = { version = "0.5.7", path = "../" }
cfg-if = "1.0"
slab = "0.4.2"
anyhow = "1.0.26"
glutin = { version = "0.32", optional = true }
gl = { version = "0.14.0", optional = true }
glutin-winit = { version = "0.5.0", optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "25.0.0", optional = true }
indexmap = { version = "2.9.0", optional = true }
bytemuck = "1.23.0"
winit = "0.30.9"
raw-window-handle = "0.6.2"
[dev-dependencies]
chrono = "0.4.10"
rand = "0.7.2"
lazy_static = "1.4.0"
