[package]
name = "nvgx-demo"
version = "0.1.2"
edition = "2024"

[features]
default = ["wgpu", "wirelines"]
wgpu = ["nvgx-wgpu"]
ogl = ["nvgx-ogl"]
wirelines = ["nvgx/wirelines"]
example-single-inst = []
save-fps = []

[dependencies]
nvgx = { path = "../" }
nvgx-wgpu = { path = "../nvgx-wgpu", optional = true }
nvgx-ogl = { path = "../nvgx-ogl", optional = true }
cfg-if = "1.0.0"
anyhow = "1.0.98"
chrono = "0.4.41"
rand = "0.9.1"
slab = "0.4.9"
lazy_static = "1.5.0"
winit = "0.30.10"
raw-window-handle = "0.6.2"
wgpu = "25.0.0"
pollster = "0.4.0"
gl = "0.14.0"
glutin-winit = "0.5.0"
glutin = "0.32.3"
